# sfdoc

./: Cargo.toml  README.md
sfdoc/: Cargo.toml  type_sizes.txt
sfdoc/src/: builder.rs  diagnostic.rs  item.rs  lib.rs  section.rs  source.rs
sfdoc_cli/: Cargo.toml  README.md
sfdoc_cli/src/: main.rs  meta.rs  snippet.rs
sfdoc_cli/src/sfdoc/: attribute.rs  section.rs  source.rs
src/: annotations.rs  main.rs  meta.rs  snippet.rs
src/sf/: builder.rs  diagnostic.rs  item.rs  mod.rs  section.rs  source.rs
src/sfdoc/: attribute.rs  builder.rs  diagnostic.rs  mod.rs  parser.rs  parser2.rs  section.rs  source.rs  tokenizer.rs
